--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
                         <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Ceremonia</h6>
                         <h4 class="mb-3">Iglesia Bautista del Sur<br> de Matamoros</h4>
                         <p class="mb-2">Calle Amapolas #47 Colonia Las Flores<br>87395 Heroica Matamoros, México</p>
-                        <p class="mb-0">5:30PM </p>
+                        <p class="mb-2">5:30PM </p>
+                        <a href="https://maps.app.goo.gl/Prrdv4Dqry4zMP1p7" target="_blank"><div class="btn btn-primary">Ver mapa</div></a>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -261,7 +262,9 @@
                         <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Recepción</h6>
                         <h4 class="" style="margin-bottom: 2.6rem;">Salón de eventos Axel</h4>
                         <p class="mb-2">Calle. Tomas Yarrington #25 entre <br>General Urrieta y 15 de Septiembre. Col.Francisco Covarrubias.</p>
-                        <p class="mb-0">6:30PM</p>
+                        <p class="mb-2">6:30PM</p>
+                        <a href="https://maps.app.goo.gl/NYUwsQDGBfXN6FQW6" target="_blank"><div class="btn btn-primary">Ver mapa</div></a>
+
                     </div>
                 </div>
             </div>
