--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Invitación Juan y Esme | Boda</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Invitación Juan y Esmeralda" name="keywords">
+    <meta content="Invitación Juan y Esmeralda" name="description">
 
     <!-- Favicon -->
     <link href="img/rings.ico" rel="icon">
