Actualizacion nombres padres

--- a/index.html
+++ b/index.html
@@ -164,12 +164,14 @@
                 <div class="row mb-3">
                     <div class="col-md-6 border-right-on-desktop border-primary">
                         <div class="text-center text-md-right mr-md-3 mb-4 mb-md-0">
+                            <h5 class="font-weight-normal text-muted"><b>Padres del novio</b></h5>
                             <h5 class="font-weight-normal text-muted">Sr. José Juan Cepeda Leos</h5>
                             <h5 class="font-weight-normal text-muted">Sra. Monica Ines Hernandez Gomez</h5>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="text-center text-md-left ml-md-3">
+                            <h5 class="font-weight-normal text-muted"><b>Padres de la novia</b></h5>
                             <h5 class="font-weight-normal text-muted">Sr. José de Jesús Rivas Arredondo</h5>
                             <h5 class="font-weight-normal text-muted">Sra. Eva Godinez Vazquez</h5>
                         </div>
